--- a/src/app/components/history/history.component.html
+++ b/src/app/components/history/history.component.html
@@ -1,13 +1,9 @@
-<po-info p-label="Cadastro de regras" p-value=""> </po-info>
+<po-info p-label="Histórico de execução"> </po-info>
 
 <!-- Teste abaixo para mostrar o Token do Protheus
 <p id="obs1"></p>
 <p id="obs2"></p>
 -->
-
-<div class="po-row">
-  <po-button-group class="po-md-6" [p-buttons]="topButtons"> </po-button-group>
-</div>
 
 <po-table
   [p-auto-collapse]="true"
