--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,16 +4,15 @@
 
   <po-menu
     [p-collapsed]="false"
-    [p-filter]="true"
+    [p-filter]="false"
     [p-menus]="menus"
+    [p-automatic-toggle]="true"
     [p-automatic-toggle]="false"
   >
-    <div *p-menu-header-template class="po-p-2 po-font-title">
-      <p>Curso <b>PO UI</b></p>
-    </div>
+    <div *p-menu-header-template class="po-p-2 po-font-title"><p>Exemplo PO UI</p> </div>
   </po-menu>
 
-  <po-page-default p-title="Grupo de Produtos">
+  <po-page-default p-title="">
     <router-outlet></router-outlet> 
   </po-page-default>
 </div>
