--- a/src/app/components/browse/TES/tes.browse.component.html
+++ b/src/app/components/browse/TES/tes.browse.component.html
@@ -1,6 +1,4 @@
-<div class="po-row">
-  <po-button-group class="po-md-6" [p-buttons]="topButtons"> </po-button-group>
-</div>
+<po-info p-label="Regras para TES" p-value=""> </po-info>
 
 <po-table
   [p-auto-collapse]="true"
