--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,7 +1,7 @@
 /* Menu Principal */
 po-menu {
     --color: #000102;
-    --background-color: #047a8f;
+    --background-color: #9ecbd3;
     --color-menu-color-menu-item-text: #080c0f;
 }
 
