--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div class="po-wrapper">
 
-  <po-toolbar p-title="Projeto Teste"></po-toolbar>
+  <po-toolbar p-title="NFs entre empresas"></po-toolbar>
 
   <po-menu
     [p-collapsed]="false"
@@ -9,7 +9,7 @@
     [p-automatic-toggle]="true"
     [p-automatic-toggle]="false"
   >
-    <div *p-menu-header-template class="po-p-2 po-font-title"><p>Exemplo PO UI</p> </div>
+    <div *p-menu-header-template class="po-p-2 po-font-title"> </div>
   </po-menu>
 
   <po-page-default p-title="">
