--- a/src/app/components/browse/CC/cc.browse.component.html
+++ b/src/app/components/browse/CC/cc.browse.component.html
@@ -1,6 +1,8 @@
-<po-info p-label="Regras para CC" p-value=""> </po-info>
+<po-textarea p-label="Regras para centro de custo" p-placeholder="Aqui contém as regras para preenchimento do centro de custo no documento de entrada (SD1)"
+  [p-readonly]="true"></po-textarea>
 
-<po-table
+<po-table 
+
   [p-auto-collapse]="true"
   [p-columns]="columns"
   [p-hide-columns-manager]="true"
