--- a/src/app/components/browse/Conta/conta.browse.component.html
+++ b/src/app/components/browse/Conta/conta.browse.component.html
@@ -1,13 +1,5 @@
-<po-info p-label="Regras para Conta contábil" p-value=""> </po-info>
+<po-textarea p-label="Regras para Conta contábil" p-placeholder="Aqui contém as regras para preenchimento da conta contábil no documento de entrada (SD1)"
+  [p-readonly]="true"></po-textarea>
 
-<po-table
-  [p-auto-collapse]="true"
-  [p-columns]="columns"
-  [p-hide-columns-manager]="true"
-  [p-hide-table-search]="false"
-  [p-items]="items"
-  [p-sort]="true"
-  [p-striped]="true"
-  [p-actions]="actions"
-  [p-actions-right]="true"
-></po-table>
+<po-table [p-auto-collapse]="true" [p-columns]="columns" [p-hide-columns-manager]="true" [p-hide-table-search]="false"
+  [p-items]="items" [p-sort]="true" [p-striped]="true" [p-actions]="actions" [p-actions-right]="true"></po-table>
